--- a/blog-preview-card-main/blog-preview-card-main/style.css
+++ b/blog-preview-card-main/blog-preview-card-main/style.css
@@ -99,6 +99,11 @@ body {
     font-size: 1.4rem;
 }
 
+.card_title:hover{
+    color: var(--primary--yelow);
+    cursor: pointer;
+}
+
 .card_text{
 
     color: var(--neutral-grey);
